--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -5,3 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "this is a pen"
+      - uses: actions/checkout@v2
+      - run: |
+        ls -la
+        cd .github/workflows/
+        ls -la
